<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MessageGroup">

    <Button
        android:id="@+id/button4"
        android:layout_width="411dp"
        android:layout_height="40dp"
        android:text="@string/group2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="411dp"
        android:layout_height="79dp"
        android:background="#673AB7"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="351dp"
            android:layout_height="44dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="24dp"
            android:layout_weight="1"
            android:background="#673AB7"
            android:outlineProvider="background"
            android:shadowColor="#673AB7"
            android:text="@string/app_title"
            android:textColor="#F4F2F6"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/linearLayout"
            app:layout_constraintTop_toTopOf="@+id/linearLayout" />

    </LinearLayout>

    <Button
        android:id="@+id/button3"
        android:layout_width="411dp"
        android:layout_height="40dp"
        android:text="@string/group1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <FrameLayout
        android:id="@+id/fragment"
        android:layout_width="409dp"
        android:layout_height="570dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button4">

    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>